cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url1cbaffb197_foxking0416_AlgorithmTraining_tgz-pJ8-algorithm_leetcode_MainLeetJ8.txt
../dataset/june2020_dataset_copy/url1cbaffb197_foxking0416_AlgorithmTraining_tgz-pJ8-algorithm_leetcode_MainLeetJ8/src/datastructure/binarytree/BinaryTree.java:12: error: package org.omg.CORBA does not exist
import org.omg.CORBA.IRObject;
                    ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
